# buque

./: .env.example  .gitignore  CONTEXT.md  Makefile  README.md  docker-compose.ip.yml  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 001_initial.py  002_erp_sync_job.py  003_job_kind_sync_log.py  004_legacy_analyzing_phase.py  005_snapshot_id.py  006_rule_grade_factors.py  007_rule_name_labels.py  008_users.py  009_chat.py  010_data_anomaly_not_orange.py
backend/contracts/: field_contract.yaml
backend/docker/: entrypoint.sh  setup-apt-mirror.sh
backend/fixtures/: README.md  excel_baseline_sample.csv  focus_skus.csv  focus_warehouses.csv  msku_mapping.csv
backend/fixtures/gerpgo_samples/: inventory.csv  orders.csv
backend/fixtures/sample_exports/: inbound.csv  inventory.csv  orders.csv
backend/scripts/: compare_excel.py  diagnose_erp_page.py  explore_erp.py  generate_delivery_workbook.py  init_db.py  probe_erp.py  probe_inventory_discrepancy.py  probe_orders_export.py
backend/tests/: conftest.py  test_auth.py  test_dos_judgment.py  test_expert.py  test_explanation_engine.py  test_parsers.py  test_pipeline_job.py  test_ref_daily_sales.py  test_risk_aggregation.py  test_rule_config_admin.py  test_rule_metric_labels.py  test_rules_api.py  test_rules_engine.py  test_rules_engine_sales_scope.py  test_schedule_config.py  test_snapshot_query.py  test_sync_job.py  test_transport_center.py  test_trigger_metric_labels.py
(+159 files in other folders)
