[project]
name = "buque"
version = "0.1.0"
description = "补雀 BuQue - 库存与销量监控预警 Agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.0",
    "alembic>=1.14.0",
    "email-validator>=2.2.0",
    "fastapi>=0.115.0",
    "google-auth>=2.37.0",
    "httpx>=0.28.0",
    "pwdlib[bcrypt]>=0.2.1",
    "pyjwt[crypto]>=2.10.0",
    "requests>=2.32.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.0",
    "playwright>=1.49.0",
    "psycopg[binary]>=3.2.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.17",
    "sqlalchemy>=2.0.36",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[project.scripts]
buque-api = "buque.main:run"
buque-job = "buque.jobs.scheduler:run_daily_pipeline_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/buque"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
